Actions
Bug #12647
closeddr_mem: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../sun4v/io/dr_mem.c: In function 'dr_mem_res_array_init': ../../sun4v/io/dr_mem.c:614: error: comparison between pointer and integer ../../sun4v/io/dr_mem.c: In function 'dr_mem_list_query': ../../sun4v/io/dr_mem.c:771: error: comparison between pointer and integer /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun4v/io/dr_mem.c:929 dr_mem_unconfigure() warn: inconsistent indenting
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7331beb48fd554088b3de38ef30491d59e0d61f7
commit 7331beb48fd554088b3de38ef30491d59e0d61f7 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-09T15:03:18.000Z 12647 dr_mem: smatch and NULL pointer errors Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions